ecmascript/parser/tests/test262-error-references/fail/45cb305cf7a07edd.js.stderr
error: A `set` accessor must have a corresponding `get` accessor
 --> $DIR/tests/test262-parser/fail/45cb305cf7a07edd.js:1:8
  |
1 | ({ set prop() {} })
  |        ^^^^

